tests/inputs/err_bad_unary.txt.snap
!!!ERROR!!!

Error {
    kind: InvalidOperation,
    name: "err_bad_unary.txt",
    line: 1,
}

invalid operation (in err_bad_unary.txt:1)
------------------------------ err_bad_unary.txt ------------------------------
   1 > {{ foo(-[1, 2]) }}
     i        ^^^^^^^ invalid operation
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------

